added correct command handling, changed command names